Added some todos for build